Added nette/application package

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
 	},
 	"require": {
 		"nette/di": "~2.2@dev",
-		"nette/mail": "~2.2@dev"
+		"nette/mail": "~2.2@dev",
+		"nette/application": "~2.2@dev"
 	},
 	"require-dev": {
 		"kappa/tester": "~1.1"
