--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
 	"require-dev": {
 		"kappa/tester": "~1.1",
 		"janmarek/mockista": "~1.0@dev",
-		"nette/nette": "~2.2@dev"
+		"nette/nette": "~2.2@dev",
+		"nette/bootstrap": "~2.2@dev"
 	},
 	"autoload": {
 		"psr-0": {
